# opti

./: .gitignore  CMakeLists.txt  README.md
cmake/: optiConfig.cmake.in
config/: gelever.sh  opti_config.h.in
examples/: CMakeLists.txt  dollarblur.m  linesearch.cpp  ndim_linesearch.cpp  nonlinear.cpp  plot_rosen.py  rosenbrock.hpp  tikhonov.py  trustregion.cpp
include/: opti_utilities.hpp  utilities.hpp
results/: cauchy.A1.txt  cauchy.A100.txt  dogleg.A1.txt  dogleg.A100.txt  newton.A1.txt  newton.A100.txt  steepest.A1.txt  steepest.A100.txt
results/tikhonov/: tikhonov.tex
src/: opti.cpp  utilities.cpp
